--- a/vue/index.html
+++ b/vue/index.html
@@ -14,4 +14,15 @@
   <body></body>
   <script src="./virtuallyDom.js"></script>
   <script src="./reactive.js"></script>
+  <script>
+    const map = new Map();
+    const weakmap = new WeakMap();
+    (function () {
+      const foo = { foo: 1 };
+      const bar = { bar: 2 };
+
+      map.set(foo, 1);
+      weakmap.set(bar, 2);
+    })();
+  </script>
 </html>
