--- a/vue/index.html
+++ b/vue/index.html
@@ -11,9 +11,12 @@
       }
     </style>
   </head>
-  <body></body>
-  <script src="./virtuallyDom.js"></script>
-  <script src="./reactive.js"></script>
+  <body>
+    <div id="app"></div>
+  </body>
+  <!-- <script src="./virtuallyDom.js"></script>
+  <script src="./reactive.js"></script> -->
+  <script src="./render.js"></script>
   <script>
     const map = new Map();
     const weakmap = new WeakMap();
