--- a/vue/index.html
+++ b/vue/index.html
@@ -16,7 +16,8 @@
   </body>
   <!-- <script src="./virtuallyDom.js"></script>
   <script src="./reactive.js"></script> -->
-  <script src="./render.js"></script>
+  <!-- <script src="./render.js"></script> -->
+  <script src="./ast.js"></script>
   <script>
     const map = new Map();
     const weakmap = new WeakMap();
